🛠️ Fix footer home link, maintain title text on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -102,7 +102,7 @@ header nav a[aria-current="page"]:hover {
   }
 
   .header__logo .text {
-    display: none;
+    /* display: none; */
   }
 
   .header__logo .menu {
